bug correted - menuContainer was too small on smartphone

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -191,9 +191,9 @@ $backroundButtonRadius: 6vh;
     }
 
     .menuBackground {
-
         right: 10%;
-        height: 90%;
+        height: 100%;
+        width: 35%;
 
         .changeBackgroundButton {
             width: $backroundButtonRadius*3/2;
